# poly-templates

counter-tailwind/: Cargo.toml  build_dev.sh  post_build.sh  routes.poly  run_dev.sh
counter-tailwind/myapp_cli/: Cargo.toml
counter-tailwind/myapp_cli/src/: main.rs
counter-tailwind/myapp_core/: Cargo.toml
counter-tailwind/myapp_core/src/: home_page.rs
counter-tailwind/myapp_lib/: Cargo.toml
counter-tailwind/myapp_lib/src/: home_page.rs
counter-tailwind/myapp_wasm/: Cargo.toml
counter-tailwind/myapp_wasm/src/: home_page.rs
counter-tailwind/myapp_web/: package-lock.json  package.json  tailwind.config.js
counter-tailwind/myapp_web/src/: home_page.ts
