[package]
name = "myapp_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myapp_core = { path = "../myapp_core" }
polyester = { git = "https://github.com/polyester-web/polyester-rs" }
serde_json = "1.0.81"